<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="2dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <ImageView
                    android:id="@+id/news_source_favicon"
                    android:layout_width="@dimen/dim_20dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/favicon"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_baseline_newspaper_24"
                    app:tint="@color/purple_500" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/news_source_site"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/stub_news_site"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_40dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="2"
            android:text="@string/stub_news_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/news_published_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_15dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/stub_news_published_date"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp">

        <ImageView
            android:id="@+id/news_thumbnail"
            android:layout_width="@dimen/dim_150dp"
            android:layout_height="@dimen/dim_100dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            app:srcCompat="@android:mipmap/sym_def_app_icon"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>
</LinearLayout>